--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
             <button class="portfolio-btn">Portfolio</button>
         </header>
         <main>
-            <section class="about">My name is Chong, and I have a strong interest in becoming a full-fledged web developer. I began my coding journey in September 2022 and thats when I became deeply interested in it. Currently, I am dedicating significant time and energy towards expanding my knowledge of JavaScript.
+            <section class="about current-sec">My name is Chong, and I have a strong interest in becoming a full-fledged web developer. I began my coding journey in September 2022 and thats when I became deeply interested in it. Currently, I am dedicating significant time and energy towards expanding my knowledge of JavaScript.
             </section>
-            <section class="portfolio current-sec">
+            <section class="portfolio">
                 <ul class="portfolio-projects">
                     <li class="projects"><a href="https://matthew-chiong.github.io/easybank/" target="_blank">EASYBANK<span>frontend mentor</span></a></li>
                     <li class="projects"><a href="https://matthew-chiong.github.io/Ecommerce-Website-Portfolio/" target="_blank">SNEAKERS<span>frontend mentor</span></a></li>
