--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <title>Document</title>
 </head>
 <body>
+    <div class="dark-mode">
+        <span class="light">Light</span><div class="light-dark-switch"></div><span class="Dark">Dark</span>
+    </div>
     <div class="wrapper">
         <header>
             <button class="about-btn current-btn">About</button>
