--- a/index.html
+++ b/index.html
@@ -8,13 +8,15 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="dark-mode">
-        <span class="light">Light</span><div class="light-dark-switch"></div><span class="Dark">Dark</span>
-    </div>
+
     <div class="wrapper">
+        <div class="dark-mode">
+            <span class="light">Light</span><div class="light-dark-switch"></div><span class="night">Dark</span>
+        </div>
         <header>
             <button class="about-btn current-btn">About</button>
-            <img class="logo" src="images/MJC-logo.png" alt="MJC logo">
+            <img class="logo-light" src="images/MJC-logo.png" alt="MJC logo">
+            <img class="logo-dark" src="images/MJC-logo-white.png" alt="MJC logo">
             <button class="portfolio-btn">Portfolio</button>
         </header>
         <main>
