--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <button class="portfolio-btn">Portfolio</button>
         </header>
         <main>
-            <section class="about current-sec">My name is Chong, and I have a strong interest in becoming a full-fledged web developer. I began my coding journey in September 2022 and thats when I became deeply interested in it. Currently, I am dedicating significant time and energy towards expanding my knowledge of JavaScript.
+            <section class="about current-sec">My name is Chong, and I have a strong interest in becoming a full-fledged web developer. I began my coding journey in September 2022 and thats when I became deeply interested in it. Currently, I am dedicating significant time and energy towards expanding my knowledge of React JS.
             </section>
             <section class="portfolio">
                 <ul class="portfolio-projects">
